--- a/index.html
+++ b/index.html
@@ -1,19 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
+  <title>BookMark Web-Site</title>
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
+  <!-- semantics tag structura -->
+  <header class="header">
+    <nav class="navbar">
+      <div class="container">
+        <div class="navigation">
+          <a href="" class="link-logo">
+            <img src="img/logo.svg" alt="logo web site">
+          </a>
 
-
-
+          <div class="group-items">
+            <ul class="site-nav-list">
+              <li class="site-list-item"><a href="#" class="site-item-link">FEATURES</a></li>
+              <li class="site-list-item"><a href="#" class="site-item-link">PRICING</a></li>
+              <li class="site-list-item"><a href="#" class="site-item-link">CONTACT</a></li>
+            </ul>
+            <button class="login-btn">LOGIN</button>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="site-hero-content">
+        <div class="site-left-content">
+          <h1 class="site-content-heading">A Simple Bookmark Manager</h1>
+          <p class="site-content-paragriph">A clean and simple interface to organize your favourite websites. Open a new
+            browser tab and see your sites load instantly. Try it for free.</p>
+          <div class="left-content-group">
+            <a href="#" class="site-btn btn-blue">Get it on Chrome</a>
+            <a href="#" class="site-btn btn-blue btn-outline">Get it on Firefox</a>
+          </div>
+        </div>
+        <div class="site-right-content">
+          <a href="#" class="site-img-link">
+            <img src="img/groupt-removebg-preview.png" alt="group image">
+          </a>
+        </div>
+      </div>
+    </div>
+  </header>
+  <!-- semantics tag structura -->
   <script src="js/main.js"></script>
 </body>
+
 </html>
